Change scss to fix spacing

--- a/webs/src/pages/induction-dinner/inductionDinner.module.scss
+++ b/webs/src/pages/induction-dinner/inductionDinner.module.scss
@@ -14,6 +14,8 @@
 
 .bodyText {
     color: #666;
+    margin: 0px;
+    padding: 0px;
 }
 
 .end {
@@ -23,4 +25,6 @@
 .bold {
     font-weight: bold;
     color: #666;
+    margin: 0px;
+    padding: 0px;
 }
